--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waste to Write</title>
     <link rel="stylesheet" href="/assets/styles/styles.css">
+    <link rel="shortcut icon" href="/assets/images/reciclagem.png" type="image/x-icon">
 </head>
 <body>
 
@@ -23,7 +24,20 @@
     </header>
 
     <main>
-
+        <section id="hero">
+            <div class="hero">
+                <div class="icons">
+                    <img src="/assets/images/reciclagem.png" alt="">
+                    <span>+</span>
+                    <img src="/assets/images/p.png" alt="">
+                    <span>=</span>
+                    <img src="/assets/images/papel.png" alt="">
+                </div>
+                <h1>We turn trash into paper</h1>
+                <p>Give a new life to your waste with our powerful paper transformation process</p>
+                <button>Let's transform</button>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -32,3 +46,4 @@
 
 </body>
 </html>
+
