--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div>
+        <div class="logo">
             <h3>w2w</h3>
         </div>
         <nav>
@@ -25,6 +25,11 @@
 
     <main>
         <section id="hero">
+            <div class="blur"></div>
+            <div class="blur2"></div>
+            <div class="blur3"></div>
+            <div class="blur4"></div>
+
             <div class="hero">
                 <div class="icons">
                     <img src="/assets/images/reciclagem.png" alt="">
