--- a/index.html
+++ b/index.html
@@ -1,54 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Waste to Write</title>
-    <link rel="stylesheet" href="/assets/styles/styles.css">
-    <link rel="shortcut icon" href="/assets/images/reciclagem.png" type="image/x-icon">
-</head>
-<body>
-
+    <link rel="stylesheet" href="/assets/styles/styles.css" />
+    <link
+      rel="shortcut icon"
+      href="/assets/images/reciclagem.png"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <h3>w2w</h3>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#!">Home</a></li>
-                <li><a href="#!">About</a></li>
-                <li><a href="#!">Services</a></li>
-                <li><a href="#!">Contacts</a></li>
-            </ul>
-        </nav>
+      <div class="logo">
+        <h3>w2w</h3>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#!">Home</a></li>
+          <li><a href="#!">About</a></li>
+          <li><a href="#!">Services</a></li>
+          <li><a href="#!">Contacts</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <section id="hero">
-            <div class="blur"></div>
-            <div class="blur2"></div>
-            <div class="blur3"></div>
-            <div class="blur4"></div>
+      <section id="hero">
+        <div class="blur"></div>
+        <div class="blur2"></div>
+        <div class="blur3"></div>
+        <div class="blur4"></div>
 
-            <div class="hero">
-                <div class="icons">
-                    <img src="/assets/images/reciclagem.png" alt="">
-                    <span>+</span>
-                    <img src="/assets/images/p.png" alt="">
-                    <span>=</span>
-                    <img src="/assets/images/papel.png" alt="">
-                </div>
-                <h1>We turn trash into paper</h1>
-                <p>Give a new life to your waste with our powerful paper transformation process</p>
-                <button>Let's transform</button>
+        <div class="hero">
+          <div class="icons">
+            <img src="/assets/images/reciclagem.png" alt="" />
+            <span>+</span>
+            <img src="/assets/images/p.png" alt="" />
+            <span>=</span>
+            <img src="/assets/images/papel.png" alt="" />
+          </div>
+          <h1>We turn trash into paper</h1>
+          <p>
+            Give a new life to your waste with our powerful paper transformation
+            process
+          </p>
+          <button>Let's transform</button>
+        </div>
+      </section>
+
+      <section id="about">
+        <div class="blur"></div>
+        <div class="blur2"></div>
+        <div class="about">
+          <h2>Waste to Write?</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            facilis tenetur nemo ullam iure exercitationem numquam, doloribus
+            distinctio quod, dolore eos animi veritatis, mollitia possimus
+            cupiditate illo quo debitis similique!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+            delectus eaque architecto nulla praesentium. Vitae aspernatur,
+            deserunt ipsam et veritatis ullam, excepturi, dicta eligendi natus
+            tempora odio qui praesentium quas! Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Beatae, eaque incidunt? Tempore
+            laudantium excepturi debitis autem veniam est incidunt, adipisci
+            numquam sint sit voluptatum atque beatae nostrum labore, eius minus!
+          </p>
+        </div>
+      </section>
+
+      <section id="services">
+        <div class="services">
+          <h2>How we do it</h2>
+          <p>
+            We will explain a little of the transformation process, each
+            component and how they interact.
+          </p>
+          <div class="card-container">
+            <div class="card">
+              <img src="/assets/images/reciclagem.png" alt="" />
+              <span class="title">Garbage</span>
+              <p class="descrition">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+                rerum nisi reiciendis, recusandae quis nostrum repudiandae
+              </p>
             </div>
-        </section>
+
+            <div class="card">
+              <img src="/assets/images/cienc.png" alt="" />
+              <span class="title">Science</span>
+              <p class="descrition">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus
+                aut soluta atque odio explicabo tempora hic accusantium ex.
+              </p>
+            </div>
+
+            <div class="card">
+              <img src="/assets/images/papel.png" alt="" />
+              <span class="title">Paper</span>
+              <p class="descrition">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla
+                delectus aut libero rerum similique, accusantium vitae et eum id.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer>
-
-    </footer>
-
-</body>
+    <footer></footer>
+  </body>
 </html>
-
