--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#!">Home</a></li>
-          <li><a href="#!">About</a></li>
-          <li><a href="#!">Services</a></li>
-          <li><a href="#!">Contacts</a></li>
+          <li><a href="#hero" class="scroll-link">Home</a></li>
+          <li><a href="#about" class="scroll-link">About</a></li>
+          <li><a href="#services" class="scroll-link">Services</a></li>
+          <li><a href="#contact" class="scroll-link">Contacts</a></li>
         </ul>
       </nav>
     </header>
@@ -104,14 +104,105 @@
               <span class="title">Paper</span>
               <p class="descrition">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla
-                delectus aut libero rerum similique, accusantium vitae et eum id.
+                delectus aut libero rerum similique, accusantium vitae et eum
+                id.
               </p>
             </div>
           </div>
         </div>
       </section>
+
+      <section id="comments">
+        <h2>Comments on the site</h2>
+
+        <div class="comments">
+          <div class="comment">
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+                tempore cum ut laboriosam aperiam natus sint commodi nemo
+                assumenda necessitatibus eveniet error repellendus totam unde,
+                ad dicta ducimus blanditiis doloremque!
+              </p>
+            </div>
+            <div>
+              <img
+                src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/774.jpg"
+                alt=""
+              />
+              <span>@otoniel_emanuel</span>
+            </div>
+          </div>
+          <div class="comment">
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+                tempore cum ut laboriosam aperiam natus sint commodi nemo
+                assumenda necessitatibus eveniet error repellendus totam unde,
+                ad dicta ducimus blanditiis doloremque!
+              </p>
+            </div>
+            <div>
+              <img
+                src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/61.jpg"
+                alt=""
+              />
+              <span>@otoniel_emanuel</span>
+            </div>
+          </div>
+          <div class="comment">
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+                tempore cum ut laboriosam aperiam natus sint commodi nemo
+                assumenda necessitatibus eveniet error repellendus totam unde,
+                ad dicta ducimus blanditiis doloremque!
+              </p>
+            </div>
+            <div>
+              <img
+                src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1164.jpg"
+                alt=""
+              />
+              <span>@otoniel_emanuel_</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="contact">
+        <div class="blur"></div>
+        <div class="blur2"></div>
+        <div class="contact">
+          <h2>Entre em contacto conosco</h2>
+
+          <p>
+            Itaque, eligendi inventore eaque quidem at officiis consequuntur sed
+            incidunt excepturi commodi blanditiis nam unde!
+          </p>
+
+          <form action="">
+            <input type="text" placeholder="your name" />
+            <input type="email" placeholder="your email" />
+            <input type="text" placeholder="subject" />
+            <textarea
+              name=""
+              placeholder="Write here"
+              id=""
+              cols="20"
+              rows="10"
+            ></textarea>
+            <button>Send</button>
+          </form>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <p>&copy; 2023 - Gid Ferreira</p>
+      </div>
+    </footer>
+    <script src="/assets/scripts/app.js"></script>
   </body>
 </html>
