--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div class="logo">
-        <h3>w2w</h3>
+        <img src="/assets/images/logo.png" alt="">
       </div>
       <nav>
         <ul>
@@ -27,7 +27,18 @@
     </header>
 
     <main>
-      <section id="hero">
+      <setion id="hero2">
+        <div class="hero2">
+          <h1>We turn trash into paper</h1>
+          <p>
+            Give a new life to your waste with our powerful paper transformation
+            process
+          </p>
+          <button>Let's transform</button>
+        </div>
+      </setion>
+
+      <!-- <section id="hero">
         <div class="blur"></div>
         <div class="blur2"></div>
         <div class="blur3"></div>
@@ -48,7 +59,7 @@
           </p>
           <button>Let's transform</button>
         </div>
-      </section>
+      </section> -->
 
       <section id="about">
         <div class="blur"></div>
